--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "compression-webpack-plugin": "^10.0.0",
     "core-js": "^3.8.3",
     "marked": "^4.2.3",
     "qs": "^6.11.0",
