--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.0",
     "compression-webpack-plugin": "^10.0.0",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
     "marked": "^4.2.3",
     "qs": "^6.11.0",
     "vue": "^2.6.14",
